Port recent changes to 1.21.1 and latest Exposure version (TODO: test servers, hard dependencies, textures)