@@ -1,5 +1,6 @@
 package com.evandev.fieldguide.compat.exposure;
 
+import com.evandev.fieldguide.Constants;
 import com.evandev.fieldguide.client.ClientFieldGuideManager;
 import com.evandev.fieldguide.client.gui.screens.FieldGuideEntryScreen;
 import com.evandev.fieldguide.client.gui.screens.FieldGuidePhotographScreen;
@@ -9,27 +10,24 @@ import com.evandev.fieldguide.config.ModConfig;
 import com.evandev.fieldguide.data.CompositeFieldGuideEntry;
 import com.evandev.fieldguide.network.GrantContentPacket;
 import com.evandev.fieldguide.platform.Services;
-import com.mojang.blaze3d.vertex.Tesselator;
 import io.github.mortuusars.exposure.ExposureClient;
-import io.github.mortuusars.exposure.camera.infrastructure.FrameData;
-import io.github.mortuusars.exposure.gui.screen.ItemListScreen;
-import io.github.mortuusars.exposure.item.PhotographItem;
-import io.github.mortuusars.exposure.render.PhotographRenderProperties;
-import io.github.mortuusars.exposure.render.PhotographRenderer;
-import io.github.mortuusars.exposure.util.ItemAndStack;
+import io.github.mortuusars.exposure.client.gui.screen.ItemListScreen;
+import io.github.mortuusars.exposure.client.render.photograph.PhotographStyle;
+import io.github.mortuusars.exposure.world.camera.frame.EntityInFrame;
+import io.github.mortuusars.exposure.world.camera.frame.Frame;
+import io.github.mortuusars.exposure.world.item.PhotographItem;
+import io.github.mortuusars.exposure.world.item.util.ItemAndStack;
 import net.minecraft.ChatFormatting;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.GuiGraphics;
 import net.minecraft.client.gui.components.ImageButton;
 import net.minecraft.client.gui.components.Tooltip;
+import net.minecraft.client.gui.components.WidgetSprites;
 import net.minecraft.client.gui.screens.Screen;
 import net.minecraft.client.renderer.LightTexture;
 import net.minecraft.client.renderer.MultiBufferSource;
 import net.minecraft.client.renderer.Rect2i;
 import net.minecraft.core.registries.BuiltInRegistries;
-import net.minecraft.nbt.CompoundTag;
-import net.minecraft.nbt.ListTag;
-import net.minecraft.nbt.Tag;
 import net.minecraft.network.chat.Component;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.server.level.ServerPlayer;
@@ -49,8 +47,8 @@ import java.util.Set;
 import java.util.function.Consumer;
 
 public class ExposureCompat {
-    private static final ResourceLocation ADD_PHOTO_ICON = new ResourceLocation("fieldguide", "textures/gui/exposure/add_photo.png");
-    private static final ResourceLocation MISSING_PHOTOGRAPH_BACKGROUND = new ResourceLocation("fieldguide", "textures/gui/exposure/missing_photograph.png");
+    private static final ResourceLocation ADD_PHOTO_ICON = ResourceLocation.fromNamespaceAndPath(Constants.MOD_ID, "textures/gui/exposure/add_photo.png");
+    private static final ResourceLocation MISSING_PHOTOGRAPH_BACKGROUND = ResourceLocation.fromNamespaceAndPath(Constants.MOD_ID, "textures/gui/exposure/missing_photograph.png");
 
     public static void setupExposureWidgets(FieldGuideEntryScreen screen, Object entry) {
         if (!ClientFieldGuideManager.isUnlocked(entry)) return;
@@ -68,7 +66,8 @@ public class ExposureCompat {
 
         if (existingPhoto.isEmpty()) {
             if (ModConfig.get().exposureAddPhotographButton) {
-                ImageButton addPhotoButton = new ImageButton(iconX, iconY, iconSize, iconSize, 0, 0, iconSize, ADD_PHOTO_ICON, 16, 32, btn -> {
+                WidgetSprites sprites = new WidgetSprites(ADD_PHOTO_ICON, ADD_PHOTO_ICON);
+                ImageButton addPhotoButton = new ImageButton(iconX, iconY, iconSize, iconSize, sprites, btn -> {
                     openPhotographSelector(screen, entry);
                 }, Component.translatable("gui.fieldguide.add_photograph"));
 
@@ -112,42 +111,42 @@ public class ExposureCompat {
     }
 
     public static void renderMissingPhotoBackground(GuiGraphics guiGraphics, int x, int y, int width, int height) {
-        guiGraphics.blit(MISSING_PHOTOGRAPH_BACKGROUND, x, y, 0, 0,width, height, width, height);
+        guiGraphics.blit(MISSING_PHOTOGRAPH_BACKGROUND, x, y, 0, 0, width, height, width, height);
     }
 
     public static void renderPhotographInGrid(GuiGraphics guiGraphics, int x, int y, int width, int height, ItemStack photograph) {
         if (photograph.getItem() instanceof PhotographItem) {
-            PhotographRenderProperties renderProperties = PhotographRenderProperties.get(photograph);
+            PhotographStyle style = PhotographStyle.of(photograph);
             Rect2i exposureArea = new Rect2i(x + 4, y + 4, width - 8, height - 8);
             int textureSize = 64;
             int sliceSize = width / 2;
 
             // Paper
-            guiGraphics.blit(renderProperties.getPaperTexture(), x, y, 0, 0, 0, sliceSize, sliceSize, textureSize, textureSize);
-            guiGraphics.blit(renderProperties.getPaperTexture(), x + sliceSize, y, 0, textureSize - sliceSize, 0, sliceSize, sliceSize, textureSize, textureSize);
-            guiGraphics.blit(renderProperties.getPaperTexture(), x, y + sliceSize, 0, 0, textureSize - sliceSize, sliceSize, sliceSize, textureSize, textureSize);
-            guiGraphics.blit(renderProperties.getPaperTexture(), x + sliceSize, y + sliceSize, 0, textureSize - sliceSize, textureSize - sliceSize, sliceSize, sliceSize, textureSize, textureSize);
+            guiGraphics.blit(style.paperTexture(), x, y, 0, 0, 0, sliceSize, sliceSize, textureSize, textureSize);
+            guiGraphics.blit(style.paperTexture(), x + sliceSize, y, 0, textureSize - sliceSize, 0, sliceSize, sliceSize, textureSize, textureSize);
+            guiGraphics.blit(style.paperTexture(), x, y + sliceSize, 0, 0, textureSize - sliceSize, sliceSize, sliceSize, textureSize, textureSize);
+            guiGraphics.blit(style.paperTexture(), x + sliceSize, y + sliceSize, 0, textureSize - sliceSize, textureSize - sliceSize, sliceSize, sliceSize, textureSize, textureSize);
 
             // Exposure
             guiGraphics.pose().pushPose();
-            float scale = exposureArea.getWidth() / (float) ExposureClient.getExposureRenderer().getSize();
+            float scale = exposureArea.getWidth() / 256.0f;
             guiGraphics.pose().translate(exposureArea.getX(), exposureArea.getY(), 1);
             guiGraphics.pose().scale(scale, scale, scale);
 
-            MultiBufferSource.BufferSource bufferSource = MultiBufferSource.immediate(Tesselator.getInstance().getBuilder());
-            PhotographRenderer.render(photograph, false, false, guiGraphics.pose(),
+            MultiBufferSource.BufferSource bufferSource = Minecraft.getInstance().renderBuffers().bufferSource();
+            ExposureClient.photographRenderer().render(photograph, false, false, guiGraphics.pose(),
                     bufferSource, LightTexture.FULL_BRIGHT, 255, 255, 255, 255);
             bufferSource.endBatch();
             guiGraphics.pose().popPose();
 
             // Paper overlay
-            if (renderProperties.hasPaperOverlayTexture()) {
+            if (style.hasOverlayTexture()) {
                 guiGraphics.pose().pushPose();
                 guiGraphics.pose().translate(0, 0, 2);
-                guiGraphics.blit(renderProperties.getPaperOverlayTexture(), x, y, 0, 0, 0, sliceSize, sliceSize, textureSize, textureSize);
-                guiGraphics.blit(renderProperties.getPaperOverlayTexture(), x + sliceSize, y, 0, textureSize - sliceSize, 0, sliceSize, sliceSize, textureSize, textureSize);
-                guiGraphics.blit(renderProperties.getPaperOverlayTexture(), x, y + sliceSize, 0, 0, textureSize - sliceSize, sliceSize, sliceSize, textureSize, textureSize);
-                guiGraphics.blit(renderProperties.getPaperOverlayTexture(), x + sliceSize, y + sliceSize, 0, textureSize - sliceSize, textureSize - sliceSize, sliceSize, sliceSize, textureSize, textureSize);
+                guiGraphics.blit(style.overlayTexture(), x, y, 0, 0, 0, sliceSize, sliceSize, textureSize, textureSize);
+                guiGraphics.blit(style.overlayTexture(), x + sliceSize, y, 0, textureSize - sliceSize, 0, sliceSize, sliceSize, textureSize, textureSize);
+                guiGraphics.blit(style.overlayTexture(), x, y + sliceSize, 0, 0, textureSize - sliceSize, sliceSize, sliceSize, textureSize, textureSize);
+                guiGraphics.blit(style.overlayTexture(), x + sliceSize, y + sliceSize, 0, textureSize - sliceSize, textureSize - sliceSize, sliceSize, sliceSize, textureSize, textureSize);
                 guiGraphics.pose().popPose();
             }
         }
@@ -175,22 +174,19 @@ public class ExposureCompat {
         return !ProgressManager.getInstance().getPhotograph(entry).isEmpty();
     }
 
-    public static void onPhotographTaken(Player player, CompoundTag frame) {
+    public static void onPhotographTaken(Player player, Frame frame) {
         if (!ModConfig.get().exposureUnlockViaPhotograph) return;
         unlockContentInFrame(player, frame);
     }
 
-    private static void unlockContentInFrame(Player player, CompoundTag frame) {
+    private static void unlockContentInFrame(Player player, Frame frame) {
         if (!(player instanceof ServerPlayer serverPlayer)) return;
 
         Set<Object> hitTargets = new HashSet<>();
 
-        if (frame.contains(FrameData.ENTITIES_IN_FRAME, Tag.TAG_LIST)) {
-            ListTag entities = frame.getList(FrameData.ENTITIES_IN_FRAME, Tag.TAG_COMPOUND);
-            for (int i = 0; i < entities.size(); i++) {
-                CompoundTag entityTag = entities.getCompound(i);
-                String entityIdStr = entityTag.getString(FrameData.ENTITY_ID);
-                ResourceLocation entityId = ResourceLocation.tryParse(entityIdStr);
+        if (frame != null && frame.entitiesInFrame() != null) {
+            for (EntityInFrame entityInFrame : frame.entitiesInFrame()) {
+                ResourceLocation entityId = entityInFrame.id();
                 if (entityId != null) {
                     BuiltInRegistries.ENTITY_TYPE.getOptional(entityId).ifPresent(hitTargets::add);
                 }
@@ -261,9 +257,9 @@ public class ExposureCompat {
             Object bestMatch;
 
             if (possibleEntries.size() == 1) {
-                bestMatch = possibleEntries.get(0);
+                bestMatch = possibleEntries.getFirst();
             } else {
-                bestMatch = possibleEntries.get(0);
+                bestMatch = possibleEntries.getFirst();
                 int maxScore = -1;
 
                 for (Object entry : possibleEntries) {
@@ -302,7 +298,7 @@ public class ExposureCompat {
         }
 
         for (ResourceLocation id : unlockedIds) {
-            Services.NETWORK.sendToPlayer(new GrantContentPacket(GrantContentPacket.Action.GRANT, GrantContentPacket.Type.ENTRY, id), serverPlayer);
+            Services.NETWORK.sendToPlayer(new GrantContentPacket(GrantContentPacket.Action.GRANT, GrantContentPacket.TypeEnum.ENTRY, id), serverPlayer);
         }
     }
 
